--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "compile:sass": "sass src/stylesheet/scss/Main.scss src/stylesheet/css/styles.css -w"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
