--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "@sentry/react": "^8.30.0",
+    "@sentry/vite-plugin": "^2.22.4",
     "axios": "^1.6.8",
     "events": "^3.3.0",
     "react": "^18.2.0",
