--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "@sentry/browser": "^5.24.2",
+    "@sentry/tracing": "^5.24.2",
     "@sentry/react": "^8.30.0",
     "@sentry/vite-plugin": "^2.22.4",
     "axios": "^1.6.8",
@@ -31,6 +33,7 @@
     "autoprefixer": "^10.4.19",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.57.0",
+
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -40,6 +43,7 @@
     "postcss": "^8.4.38",
     "prettier-eslint": "^16.3.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "sass": "1.78.0"
   }
 }
