--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,33 +7,40 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "compile:sass": "sass src/stylesheet/scss/Main.scss src/stylesheet/css/styles.css -w"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@sentry/browser": "^5.24.2",
-    "@sentry/tracing": "^5.24.2",
     "@sentry/react": "^8.30.0",
+    "@sentry/tracing": "^5.24.2",
     "@sentry/vite-plugin": "^2.22.4",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "events": "^3.3.0",
+    "lucide-react": "^0.441.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^22.5.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "babel-eslint": "^10.1.0",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
-
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -43,7 +50,6 @@
     "postcss": "^8.4.38",
     "prettier-eslint": "^16.3.0",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "sass": "1.78.0"
+    "vite": "^5.2.0"
   }
 }
