--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,12 @@
     "lucide-react": "^0.441.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-hook-form": "^7.52.1",
-    "react-redux": "^9.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
