--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "events": "^3.3.0",
     "lucide-react": "^0.441.0",
     "react": "^18.2.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
