--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "react-select": "^5.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "chart.js": "^4.4.2"
+    "chart.js": "^4.4.2",
+    "react-chartjs-2": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
