--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "chart.js": "^4.4.2"
-    // "react-chartjs-2": "^3.0.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
